[INFLUX] 데이터 검색